fix: SDK 버전 호환을 위해 List.getFirst()를 get(0)으로 변경